--- a/templates/Pemilik/dashboard.html
+++ b/templates/Pemilik/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "pemilik/base_pemilik.html" %} {% block title %} Dashboard Admin |
+{% extends "pemilik/base_pemilik.html" %} {% block title %} Dashboard Pemilik |
 Oval Photo {% endblock %} {% block content %}
 <h4 class="fw-bold mb-4">Dashboard</h4>
 
