--- a/templates/Pemilik/pesanan_detail.html
+++ b/templates/Pemilik/pesanan_detail.html
@@ -1,4 +1,4 @@
-{% extends "pemilik/base_pemilik.html" %} {% block title %} Dashboard Admin | Oval
+{% extends "pemilik/base_pemilik.html" %} {% block title %} Dashboard Pemilik | Oval
 Photo {% endblock %} {% block content %}
 <div class="row">
   <div class="col-12">
