--- a/templates/user/footer.html
+++ b/templates/user/footer.html
@@ -5,7 +5,7 @@
       <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
         <div class="d-flex align-items-center mb-3">
           <img
-            src="static/img/logo.png"
+            src="{{ url_for('static', filename='img/logo.png') }}"
             alt="Logo"
             style="width: 50px; height: 50px; margin-right: 10px"
           />
